Fixed horizontal scroll

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -109,3 +109,6 @@ button.navbar-toggler{
   background-size: cover;
   background-repeat: no-repeat;
 }
+html{
+  overflow-x: hidden;
+}
